<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:minHeight="?android:attr/listPreferredItemHeight"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/playerPosition"
        android:text="@string/test_position"
        android:gravity="center_vertical"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerName"
            android:text="@string/test_name"
            android:gravity="center_vertical"
            android:layout_margin="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerTeam"
            android:text="@string/test_team"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@id/playerScore"
        android:text="@string/test_points"
        android:gravity="center_vertical"
        />

</LinearLayout>